# jaeger-mongodb

./: Dockerfile.collector  Dockerfile.query  README.md  main.spec  pyproject.toml  setup.cfg
src/jaeger_grpc_server/: main.py
src/jaeger_grpc_server/config/: config.py
src/jaeger_grpc_server/db/: collection.py  mongo_client.py  span_collection.py
src/jaeger_grpc_server/service/: dependency_reader.py  span_reader.py  span_writer.py
